--- a/6. Ma'lumotlarga ishlov berish/4-dars/4-dars.Preprocessing.ipynb
+++ b/6. Ma'lumotlarga ishlov berish/4-dars/4-dars.Preprocessing.ipynb
@@ -7,21 +7,22 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('https://raw.githubusercontent.com/iRavshan/pro_data_scientist/main/datasets/police.csv')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/iRavshan/Data-Science-and-AI/main/assets/datasets/police.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
        "4       Citation       False      0-15 Min               False  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
