--- a/9. Supervised Learning Regressiya/1-dars/1-dars.Regression.ipynb
+++ b/9. Supervised Learning Regressiya/1-dars/1-dars.Regression.ipynb
@@ -20,23 +20,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Linear Regression**"
+    "### **Simple Regression**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/iRavshan/Data-Science-and-AI/main/assets/datasets/regression/salary_dataset.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YearsExperience</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>39344.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.4</td>\n",
+       "      <td>46206.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.6</td>\n",
+       "      <td>37732.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.1</td>\n",
+       "      <td>43526.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.3</td>\n",
+       "      <td>39892.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   YearsExperience   Salary\n",
+       "0              1.2  39344.0\n",
+       "1              1.4  46206.0\n",
+       "2              1.6  37732.0\n",
+       "3              2.1  43526.0\n",
+       "4              2.3  39892.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -50,18 +119,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('')"
+    "df = pd.read_csv('https://raw.githubusercontent.com/iRavshan/Data-Science-and-AI/main/assets/datasets/student_performance.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hours Studied</th>\n",
+       "      <th>Previous Scores</th>\n",
+       "      <th>Extracurricular Activities</th>\n",
+       "      <th>Sleep Hours</th>\n",
+       "      <th>Sample Question Papers Practiced</th>\n",
+       "      <th>Performance Index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>99</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>91.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>75</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Hours Studied  Previous Scores Extracurricular Activities  Sleep Hours  \\\n",
+       "0              7               99                        Yes            9   \n",
+       "1              4               82                         No            4   \n",
+       "2              8               51                        Yes            7   \n",
+       "3              5               52                        Yes            5   \n",
+       "4              7               75                         No            8   \n",
+       "\n",
+       "   Sample Question Papers Practiced  Performance Index  \n",
+       "0                                 1               91.0  \n",
+       "1                                 2               65.0  \n",
+       "2                                 2               45.0  \n",
+       "3                                 2               36.0  \n",
+       "4                                 5               66.0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
