Classification. Machine Learning

--- a/10. Klassifikatsiya/1-dars/1-dars.Classification.ipynb
+++ b/10. Klassifikatsiya/1-dars/1-dars.Classification.ipynb
@@ -823,7 +823,7 @@
     "\n",
     "plt.subplot(1, 2, 2)\n",
     "plt.pie(x=df['diagnosis'].value_counts(), \n",
-    "        labels=['malignant', 'benign'],\n",
+    "        labels=['benign', 'malignant'],\n",
     "        autopct='%1.1f%%',\n",
     "        explode=[0, 0.1],\n",
     "        startangle=90,\n",
